<?xml version="1.0"?>
<package format="2">
  <name>my_first_gazebo_world</name>
  <version>0.0.0</version>
  <description>The my_first_gazebo_world package</description>

  <maintainer email="miguel@todo.todo">miguel</maintainer>
  
  <maintainer email="adrian@todo.todo">adrian</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
